loading icon and flickering fix

--- a/frontend/src/assets/css/service-flow.css
+++ b/frontend/src/assets/css/service-flow.css
@@ -37,3 +37,12 @@
   list-style-type: disc;
   display: list-item !important;
 }
+.loading div {
+  border: unset;
+  -webkit-animation: unset;
+  border-radius: unset;
+}
+
+input.mx-input:focus, input.mx-input:hover {
+  margin: unset !important;
+}
